# spelling-bee-answers

./: .gitignore  LICENSE  Makefile  Pangrams.md  README.md  Words.md  app.py  defs.py  gen_readme_table.py  pyproject.toml  settings.py  setup.cfg  stats.py  test_app.py  utils.py
.github/: dependabot.yml
.github/workflows/: answers.yml  ci.yml
data/: definitions.yml
days/: 2023-01-01.json  2023-01-02.json  2023-01-03.json  2023-01-04.json  2023-01-05.json  2023-01-06.json  2023-01-07.json  2023-01-08.json  2023-01-09.json  2023-01-10.json  2023-01-11.json  2023-01-12.json  2023-01-13.json  2023-01-14.json  2023-01-15.json  2023-01-16.json  2023-01-17.json  2023-01-18.json  2023-01-19.json  2023-01-20.json  2023-01-21.json  2023-01-22.json  2023-01-23.json  2023-01-24.json  2023-01-25.json  2023-01-26.json  2023-01-27.json  2023-01-28.json  2023-01-29.json  2023-01-30.json  2023-01-31.json  2023-02-01.json  2023-02-02.json  2023-02-03.json  2023-02-04.json  2023-02-05.json  2023-02-06.json  2023-02-07.json  2023-02-08.json  2023-02-09.json  (+753 more)
outputs/: Days.md  Pangrams.md  Words.md
scripts/: format.sh
spelling_bee_answers/: __init__.py  app.py  days.py  definitions.py  dictionary.py  gen_readme_table.py  interfaces.py  models.py  settings.py  stats.py
spelling_bee_answers/scrapers/: nyt.py  sbsolver.py
spelling_bee_answers/tests/: test_app.py  test_days.py  test_integration.py  test_interfaces.py  test_models.py  test_settings.py  test_stats.py
spelling_bee_answers/tools/: sbsolver.py  (+1 more)
tests/: test_app.py  test_gen_readme_table.py  test_integration.py
(+4 files in other folders)
