[tool.poetry]
name = "nytimes-spelling-bee-answers"
version = "1.0.0"
description = ""
authors = ["Taylor D. Edmiston <tedmiston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.1"
tabulate = "^0.9.0"
pydantic = "^1.10.4"

[tool.poetry.dev-dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
