[tool.poetry]
name = "nytimes-spelling-bee-answers"
version = "1.1.0"
description = ""
authors = ["Taylor D. Edmiston <tedmiston@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
tabulate = "^0.9.0"
pydantic = {extras = ["dotenv"], version = "^1.10.4"}
pendulum = "^2.1.2"
rich = "^13.3.1"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
